--- a/css/base.css
+++ b/css/base.css
@@ -1,5 +1,15 @@
+* {
+    box-sizing: border-box;
+}
+
 #indexList {
     list-style: none;
+    padding-left: 0;
+}
+
+body {
+    position: relative;
+    min-height: 100vh;
 }
 
 header {
@@ -15,9 +25,12 @@ footer {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: burlywood;
     text-align: center;
+    text-justify: auto;
     font-size: 1.2rem;
-    padding: 10px;
-    margin-top: 20px;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 110px;
 }
 
 main {
@@ -25,21 +38,24 @@ main {
     margin: auto;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 1.2rem;
+    padding-bottom: 110px;
 }
 
 #imgContainer {
-    width: 40%;
     margin: auto;
+    width: 500px;
+    height: 280px;
 }
 
 img {
     border-radius: 30px;
     border: 10px solid burlywood;
+    width: 100%;
 }
 
 ol li {
     background-color: rgb(224, 152, 57);
-    padding: 10px;
+    padding: 5px;
 }
 
 ul li {
@@ -56,4 +72,5 @@ a {
 
 h3 {
     font-size: 1.8rem;
+    margin: 0;
 }
