--- a/Todos/css/todos.css
+++ b/Todos/css/todos.css
@@ -12,7 +12,7 @@ h1 {
     width: 300px;
 }
 
-#topTask, #tabs, #new, button, .task {
+#topTask, #tabs, #new, button {
     height: 50px;
 }
 
@@ -65,7 +65,8 @@ button {
 .task {
     display: grid;
     grid-template-columns: 50px 200px 50px;
-    grid-template-rows: 50px;
+    grid-template-rows: 1fr;
+    min-height: 50px;
     border: 1px solid black;
     border-right: 2px solid black;
     border-left: 2px solid black;
@@ -98,6 +99,9 @@ input[type='checkbox'] {
     grid-row: 1/2;
     grid-column: 2/3;
     font-size: 1.2rem;
+    max-width: 200px;
+    white-space: pre-line;
+    padding: 2px;
 }
 
 .taskBtn {
@@ -121,6 +125,6 @@ input[type=radio] {
 }
 
 input[type=radio]:checked + .filters {
-    background-color: rgb(51, 97, 248);
+    background-color: rgb(255, 0, 0);
     color: white;
 }
