--- a/css/base.css
+++ b/css/base.css
@@ -74,3 +74,85 @@ h3 {
     font-size: 1.8rem;
     margin: 0;
 }
+
+/* @keyframes moveRight { 
+    from {
+    transform: translateX(-50%);
+    }
+    to {
+    transform: translateX(50%);
+    }
+}
+
+@keyframes appearDisappear { 
+    0%, 100% {
+    opacity: 0;
+    }
+    20%, 80% {
+    opacity: 1;
+    }
+}
+
+@keyframes bgMove {
+    100% {
+    background-position: 120% 0;
+    }
+} */
+
+#bike {
+    width: 200px;
+}
+
+#bike.parent {
+    list-style-type: unset;
+}
+
+#bike::after {
+    content: '';
+    width: 90px;
+    height: 92px;
+    background-image: url(../images/Picture2.jpg);
+    display: block;
+    margin: auto;
+    animation: 
+        0.4s steps(4, end) infinite 50ms bike,
+        8s linear infinite 50ms move;
+    animation-play-state: paused;
+}
+
+#bike:hover:after {
+    animation-play-state: running;
+}
+
+@keyframes bike {
+    0% {
+    background-position: 0 0;
+    }
+    100% {
+        background-position: -360px 0;
+    }
+}
+
+@keyframes move {
+    0% {
+    transform: translateX(-100px);
+    }
+    100% {
+    transform: translateX(100px);
+    }
+}
+
+.myCanvas {
+    border: dotted 2px black;
+}
+
+svg {
+    width: 200px;
+    height: 200px;
+}
+
+.spin {
+    position: absolute;
+    top: 8px;
+    left: 55px;
+}
