--- a/pokeTeam/css/poke.css
+++ b/pokeTeam/css/poke.css
@@ -9,7 +9,7 @@ body {
     width: 98%;
     margin: 0 1% 0 1%;
     position: relative;
-    height: 100vmax;
+    height: 100vh;
     padding-top: 160px;
     padding-bottom: 84px;
 }
@@ -77,8 +77,8 @@ footer {
 main {
     display: grid;
     grid-template-columns: 30% 30% 40%;
-    grid-template-rows: 30% 5% 65%;
-    height: 100%;
+    grid-template-rows: 250px 5% 1fr;
+    /* height: 100%; */
 }
 
 #single {
@@ -97,6 +97,7 @@ main {
     grid-column: 2/3;
     grid-row: 1/4;
     border: 1px solid #CC0000;
+    min-width: 250px;
 }
 
 #results {
@@ -115,6 +116,102 @@ input, select {
     height: 44px;
 }
 
+/* ------------Details------------ */
 
+#single {
+    padding: 10px;
+}
 
+#single ul {
+    padding: 0;
+    margin: 0;
+}    
 
+#detail {
+    display: grid;
+    grid-template-columns: 130px 170px;
+    grid-template-rows: 90px 25px 25px 1fr;
+    text-align: start;
+    font-family: 'Maven Pro', sans-serif;
+    font-weight: bold;
+}
+
+#detail h2 {
+    grid-column: 1/2;
+    grid-row: 1/2;
+    justify-content: center;
+    margin: 0;
+}
+
+#detailImg {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    overflow: hidden;
+}
+
+#detailImg img {
+    width: 150px;
+    object-fit: cover;
+    margin-top: -30px;
+}
+
+#detail p {
+    grid-column: 1/2;
+    margin:0;
+}
+
+#detailTypes ul {
+    padding-left: 10px;
+}
+
+#detailTypes {
+    grid-column: 1/2;
+    grid-row: 4/5;
+}
+
+#detailTypes ul li, #detailStats ul li {
+    list-style: none;
+} 
+
+#detailStats {
+    grid-column: 2/3;
+    grid-row: 2/5;
+}
+
+#detailStats ul {
+    padding: 0;
+    margin: 0;
+}
+
+/* --------------- Search/Filter Results---------------- */
+
+#results {
+    padding: 20px;
+}
+
+#resultList {
+    font-family: 'Maven Pro', sans-serif;
+    font-weight: bold;
+    list-style: none;
+    padding: 0;
+}
+
+#resultList li {
+    padding: 2px;
+    width: 50%;
+    text-align: center;
+    margin:auto;
+}
+
+#resultList li:nth-child(odd) {
+    background-color: #3b4cca4f;
+}
+
+#resultList li:nth-child(even) {
+    background-color: #b3a0254f;
+}
+
+#nextBtn {
+    position: absolute;
+    right: 20px;
+}
