--- a/pokeTeam/css/poke.css
+++ b/pokeTeam/css/poke.css
@@ -6,12 +6,13 @@
 }
 
 body {
-    width: 98%;
-    margin: 0 1% 0 1%;
+    width: 95%;
+    margin: 0 2% 0 2%;
     position: relative;
-    height: 100vh;
+    height: 100%;
     padding-top: 160px;
-    padding-bottom: 84px;
+    padding-bottom: 100px;
+    min-width: 330px;
 }
 
 h1, h2, label {
@@ -81,40 +82,52 @@ footer {
 
 main {
     display: grid;
-    grid-template-columns: 30% 30% 40%;
-    grid-template-rows: 250px 5% 1fr;
-    /* height: 100%; */
+    grid-template-columns: 1fr 30% 1fr;
+    grid-template-rows: 300px 5% 1fr;
+    grid-gap: 10px;
+    width: 100%;
+    margin-bottom: 20px;
 }
 
 #single {
     grid-column: 1/2;
-    grid-row: 1/2;
-    border: 1px solid #CC0000;
+    grid-row: 3/4;
+    min-width: 325px;
 }
 
 #team {
     grid-column: 1/2;
-    grid-row: 3/4;
-    border: 1px solid #CC0000;
+    grid-row: 1/2;
+    min-width: 325px;
 }
 
 #filter {
     grid-column: 2/3;
     grid-row: 1/4;
-    border: 1px solid #CC0000;
-    min-width: 250px;
+    min-width: 280px;
+    display: flex;
+    flex-direction: column;
 }
 
 #results {
     grid-column: 3/4;
     grid-row: 1/4;
-    border: 1px solid #CC0000;
+}
+
+#single, #team, #results, #filter {
+    box-shadow: 0 0 5px #3B4CCA;
+    border-radius: 10px;
 }
 
 fieldset, label {
     display: flex;
     flex-direction: column;
     padding: 5px;
+}
+
+fieldset {
+    border: none;
+    margin: 10px 0 10px 0;
 }
 
 input, select {
@@ -142,18 +155,21 @@ button {
 
 #detail {
     display: grid;
-    grid-template-columns: 130px 170px;
-    grid-template-rows: 90px 25px 25px 1fr;
+    grid-template-columns: 140px 170px;
+    grid-template-rows: 130px 25px 25px 1fr;
     text-align: start;
     font-family: 'Maven Pro', sans-serif;
     font-weight: bold;
+    justify-content: center;
+    align-items: center;
 }
 
 #detail h2 {
     grid-column: 1/2;
     grid-row: 1/2;
-    justify-content: center;
+    align-self: center;
     margin: 0;
+    font-size: 1.2rem;
 }
 
 #detailImg {
@@ -165,7 +181,7 @@ button {
 #detailImg img {
     width: 150px;
     object-fit: cover;
-    margin-top: -30px;
+    margin-top: -10px;
 }
 
 #detail p {
@@ -196,6 +212,11 @@ button {
     margin: 0;
 }
 
+#addToTeamBtn {
+    margin-top: 10px;
+    width: 100%;
+}
+
 /* --------------- Search/Filter Results---------------- */
 
 #results {
@@ -217,17 +238,21 @@ button {
 }
 
 #resultList li:nth-child(odd) {
-    /* background-color: #3b4cca4f; */
     color: white;
     background-color:#3B4CCA;
 }
 
 #resultList li:nth-child(even) {
-    /* background-color: #b3a0254f; */
     background-color:#FFDE00;
 }
 
 #nextBtn {
     position: absolute;
     right: 20px;
+}
+
+/* -------------Team Display------------------- */
+
+#team {
+    padding: 5px;
 }
