--- a/pokeTeam/css/small.css
+++ b/pokeTeam/css/small.css
@@ -1,4 +1,34 @@
-@media only screen and (max-width: 550px) {
+@media only screen and (max-width: 1030px) {
+
+    main {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 310px 1fr;
+    }
+
+    #single {
+        grid-column: 2/3;
+        grid-row: 1/2;
+    }
+
+    #team {
+        grid-column: 1/2;
+        grid-row: 1/2;
+    }
+
+    #filter {
+        grid-column: 1/2;
+        grid-row: 2/3;
+    }
+
+    #results {
+        grid-column: 2/3;
+        grid-row: 2/3;
+    }
+
+}
+
+@media only screen and (max-width: 700px) {
 
     #ball2 {
         display: none;
