--- a/pokeTeam/css/poke.css
+++ b/pokeTeam/css/poke.css
@@ -96,15 +96,15 @@ main {
 }
 
 #team {
-    grid-column: 1/2;
-    grid-row: 1/2;
-    min-width: 325px;
+    grid-column: 2/3;
+    grid-row: 1/4;
+    min-width: 370px;
 }
 
 #filter {
-    grid-column: 2/3;
-    grid-row: 1/4;
-    min-width: 280px;
+    grid-column: 1/2;
+    grid-row: 1/2;
+    min-width: 325px;
     display: flex;
     flex-direction: column;
 }
@@ -140,6 +140,11 @@ button {
     font-weight: bold;
     font-size:1.2rem;
     color: white;
+}
+
+#inputError {
+    color: #FF0000;
+    font-size: 1.2rem;
 }
 
 /* ------------Details------------ */
@@ -215,6 +220,11 @@ button {
 #addToTeamBtn {
     margin-top: 10px;
     width: 100%;
+    transition: transform 2s;
+}
+
+.alerted {
+    transform: scale(1.1) translate(0, -120px) rotate(35deg);
 }
 
 /* --------------- Search/Filter Results---------------- */
@@ -254,5 +264,44 @@ button {
 /* -------------Team Display------------------- */
 
 #team {
-    padding: 5px;
+    padding: 10px;
+    position: relative;
+}
+
+#delTeamAll {
+    width: 95%;
+    position: absolute;
+    bottom: 10px;
+}
+
+#team div ul {
+    list-style: none;
+    padding: 0;
+}
+
+.resultsTeam {
+    font-family: 'Maven Pro', sans-serif;
+    font-weight: bold;
+    font-size: 1.1rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    position: relative;
+    padding-right: 45px;
+}
+
+.resultsTeam div img {
+    width: 100%;
+}
+
+.resultsTeam div {
+    width: 80px;
+}
+
+.garbage {
+    font-size: 2rem;
+    color: #FF0000;
+    position: absolute;
+    right: 0;
 }
