--- a/pokeTeam/css/small.css
+++ b/pokeTeam/css/small.css
@@ -12,23 +12,27 @@
     }
 
     #team {
-        grid-column: 1/2;
-        grid-row: 1/2;
+        grid-column: 2/3;
+        grid-row: 2/3;
     }
 
     #filter {
         grid-column: 1/2;
-        grid-row: 2/3;
+        grid-row: 1/2;
     }
 
     #results {
-        grid-column: 2/3;
+        grid-column: 1/2;
         grid-row: 2/3;
     }
 
 }
 
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 745px) {
+
+    body {
+        min-width: 370px;
+    }
 
     #ball2 {
         display: none;
@@ -44,5 +48,24 @@
         display: flex;
         flex-direction: column;
     }
+
+    #team {
+        padding-bottom: 50px;
+        order: 1;
+    }
+
+    #single {
+        order: 2;
+    }
+
+    #filter {
+        order: 3;
+    }
+
+    #results {
+        order: 4;
+    }
+
+
 
 }
